# EncCreditScoring-HE

./: .gitignore  README.md
cpp/: CMakeLists.txt  HomomorphicLogisticRegression.cpp  HomomorphicLogisticRegression.h  logreg.cpp  main.cpp
data/: bias_vector.csv  plain_results.csv  weight_matrix.csv
data/resluts_log_reg/: bias_vector.csv  weight_matrix.csv  y_test.csv
data/result_binary_logreg/: X_test.csv  bias_scalar.csv  weight_vector.csv  y_test.csv
data/results_mlp/: bias_vector.csv  weight_matrix.csv  y_test.csv
python/: compare_results.py  setup.py  train_model.py
python/logistic_regression/: train_model.py  utils.py
python/multy_layer_perceptron/: mlp.py
